# adventOfCode2025

./: README.md  pyproject.toml
src/adventofcode2025/day1/: main.py
src/adventofcode2025/day2/: main.py
src/adventofcode2025/day3/: consts.py  main.py
src/adventofcode2025/day4/: input.py  main.py
src/adventofcode2025/day5/: input.py  main.py
src/adventofcode2025/day6/: input.py  main.py
src/adventofcode2025/day7/: dfs.py  input.py  main.py
src/adventofcode2025/day8/: input.py  main.py
src/adventofcode2025/day9/: input.py  main.py
src/adventofcode2025/utils/: ascii_utils.py  matrix_utils.py
