[build-system]
requires = ["uv_build>=0.9.14,<0.10.0"]
build-backend = "uv_build"

[project]
name = "adventofcode2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv.build-backend]
module-name = "adventofcode2025"
module-root = "src"

[project.scripts]
day1 = "adventofcode2025.day1.main:main"
day3 = "adventofcode2025.day3.main:main"
